[gd_scene load_steps=6 format=3 uid="uid://cruh8bbcfvyvr"]

[ext_resource type="Texture2D" uid="uid://brp4euwugc18f" path="res://assets/background.png" id="1_blg2x"]
[ext_resource type="PackedScene" uid="uid://bt33j5dwxano3" path="res://scenes/top_ui.tscn" id="2_wrbvl"]
[ext_resource type="Texture2D" uid="uid://cdunkljd6up72" path="res://assets/bottom_ui.png" id="3_jy0d4"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="4_4jr62"]
[ext_resource type="PackedScene" path="res://scenes/end_game.tscn" id="5_5q4mv"]

[node name="Game" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("1_blg2x")

[node name="top_ui" parent="." instance=ExtResource("2_wrbvl")]

[node name="bottom_ui" type="TextureRect" parent="."]
offset_top = 928.0
offset_right = 576.0
offset_bottom = 1020.0
texture = ExtResource("3_jy0d4")

[node name="grid" type="Node2D" parent="."]
script = ExtResource("4_4jr62")
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MarginContainer" parent="." instance=ExtResource("5_5q4mv")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 44.0
offset_top = 950.0
offset_right = 544.0
offset_bottom = 990.0

[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
